--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Ellipsoid",
+            "request": "launch",
+            "mainClass": "Ellipsoid",
+            "projectName": "Visual Code_bb74102a"
+        },
+        {
+            "type": "java",
             "name": "Launch Point",
             "request": "launch",
             "mainClass": "Point",
